--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^15.4.1",
+    "react-addons-update": "^15.4.2",
     "react-dom": "^15.4.1"
   },
   "devDependencies": {
